--- a/index.html
+++ b/index.html
@@ -14,12 +14,24 @@
 </head>
 <body>
 
-  <div class="qr">
-    <img class="qr__image" src="./images/image-qr-code.png" alt="qe-code">
-    <div class="qr__container">
-      <h3 class="qr__title">Improve your front-end skills by building projects</h3>
-      <p class="qr__subtitle">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
-    </div>
-  </div>
+  <main>
+
+    <section class="qr">
+      <div>
+        <img class="qr__image" src="./images/image-qr-code.png" alt="qe-code">
+      </div>
+        <div class="qr__container">
+          <h3 class="qr__title">Improve your front-end skills by building projects</h3>
+          <p class="qr__subtitle">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+        </div>
+      </div>
+    </section>
+
+    <footer class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="#">Maestro0794</a>.
+    </footer>
+
+  </main>
 </body>
 </html>
